--- a/클론코딩/header.css
+++ b/클론코딩/header.css
@@ -44,6 +44,7 @@ fieldset{
     margin-left: 5px;
 }
 .img_logo{
+    margin-top:15px;
     margin-bottom: 12px;
     width: 220px;
     height: 65px;
@@ -66,7 +67,8 @@ fieldset{
 }
 .search_box button{
     flex: 1;
-    height: 46px;
+    /* 아랫부분 잘 이해안감 왜 46하면 남고 50해야 딱 맞는지 */
+    height: 50px;
     margin: 0;
     padding: 0;
     border: none;
@@ -75,6 +77,12 @@ fieldset{
     color:#ffffff;
 }
 header > nav{
+    width:100%;
+    height: 45px;
+    position: absolute;
+    bottom :0;
+}
+.nav_items{
     width:100%;
     height: 100%;
     display: flex;
